# KobeBryantScriptEngine-Python

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  KobeBryantPlugin.json  README.md  manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
python/: KobeBryantAPI.pyi  KobeBryantEvent.py
resources/: empty.py  zh_CN.lang
scripts/: after_build.py
src/: Main.cpp  Version.hpp  dllmain.cpp  resource.hpp  resource.rc
src/api/: BindAPI.cpp  CommandRegistry.cpp  CommandRegistry.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Logger.cpp  PacketSender.cpp  Schedule.cpp  Schedule.hpp  Service.cpp
src/core/: PythonPluginEngine.cpp  PythonPluginEngine.hpp
